force-app/main/default/objects/Asset__c/fields/NHVAS_Accredited__c.field-meta.xml
<CustomField>
    <fullName>NHVAS_Accredited__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Box must be ticked if the asset is registered with NHVAS</inlineHelpText>
    <label>NHVAS Accredited</label>
    <type>Checkbox</type>
</CustomField>