force-app/main/default/objects/Asset__c/fields/NHVAS_ID_No__c.field-meta.xml
<CustomField>
    <fullName>NHVAS_ID_No__c</fullName>
    <label>NHVAS ID No:</label>
    <length>40</length>
    <type>Text</type>
</CustomField>