force-app/main/default/objects/Asset__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <inlineHelpText>Used to record any significant information during life of the asset eg new speedo, new number plate, paint job</inlineHelpText>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>