force-app/main/default/objects/Asset__c/fields/OEM_Certification__c.field-meta.xml
<CustomField>
    <fullName>OEM_Certification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OEM Certification</label>
    <type>Checkbox</type>
</CustomField>