force-app/main/default/objects/Asset__c/fields/Office_Product_Key__c.field-meta.xml
<CustomField>
    <fullName>Office_Product_Key__c</fullName>
    <label>Office Product Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>