force-app/main/default/objects/Asset__c/fields/Old_Asset_ID__c.field-meta.xml
<CustomField>
    <fullName>Old_Asset_ID__c</fullName>
    <label>Old Asset ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>