force-app/main/default/objects/Asset__c/fields/Parent_Asset__c.field-meta.xml
<CustomField>
    <fullName>Parent_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Asset that this asset is currently associated with</description>
    <label>Parent Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Child Assets</relationshipLabel>
    <relationshipName>WD_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>