force-app/main/default/objects/Asset__c/fields/Parts_Cab_Suspension__c.field-meta.xml
<CustomField>
    <fullName>Parts_Cab_Suspension__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parts - Cab Suspension</label>
    <referenceTo>Engines__c</referenceTo>
    <relationshipLabel>WD Assets (Parts - Cab Suspension)</relationshipLabel>
    <relationshipName>WD_Assets7</relationshipName>
    <type>Lookup</type>
</CustomField>