force-app/main/default/objects/Asset__c/fields/Parts_Diffs__c.field-meta.xml
<CustomField>
    <fullName>Parts_Diffs__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parts - Diffs</label>
    <referenceTo>Engines__c</referenceTo>
    <relationshipLabel>WD Assets (Parts - Diffs)</relationshipLabel>
    <relationshipName>WD_Assets6</relationshipName>
    <type>Lookup</type>
</CustomField>