force-app/main/default/objects/Asset__c/fields/Parts_Drive_Tyres__c.field-meta.xml
<CustomField>
    <fullName>Parts_Drive_Tyres__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parts - Drive Tyres</label>
    <referenceTo>Engines__c</referenceTo>
    <relationshipLabel>WD Assets (Parts - Drive Tyres)</relationshipLabel>
    <relationshipName>WD_Assets4</relationshipName>
    <type>Lookup</type>
</CustomField>