force-app/main/default/objects/Asset__c/fields/Parts_Front_Axle__c.field-meta.xml
<CustomField>
    <fullName>Parts_Front_Axle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parts - Front Axle</label>
    <referenceTo>Engines__c</referenceTo>
    <relationshipLabel>WD Assets (Parts - Front Axle)</relationshipLabel>
    <relationshipName>WD_Assets8</relationshipName>
    <type>Lookup</type>
</CustomField>