force-app/main/default/objects/Asset__c/fields/Parts_gearbox__c.field-meta.xml
<CustomField>
    <fullName>Parts_gearbox__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parts - Gear Box</label>
    <referenceTo>Engines__c</referenceTo>
    <relationshipLabel>WD Assets (Parts - Gear Box)</relationshipLabel>
    <relationshipName>WD_Assets2</relationshipName>
    <type>Lookup</type>
</CustomField>