force-app/main/default/objects/Asset__c/fields/Parts_Rims__c.field-meta.xml
<CustomField>
    <fullName>Parts_Rims__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parts - Rims</label>
    <referenceTo>Engines__c</referenceTo>
    <relationshipLabel>WD Assets (Parts - Rims)</relationshipLabel>
    <relationshipName>WD_Assets5</relationshipName>
    <type>Lookup</type>
</CustomField>