force-app/main/default/objects/Asset__c/fields/Parts_Steer_Tyre__c.field-meta.xml
<CustomField>
    <fullName>Parts_Steer_Tyre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parts - Steer Tyre</label>
    <referenceTo>Engines__c</referenceTo>
    <relationshipLabel>WD Assets (Parts - Steer Tyre)</relationshipLabel>
    <relationshipName>WD_Assets3</relationshipName>
    <type>Lookup</type>
</CustomField>