force-app/main/default/objects/Asset__c/fields/Pipe_Type__c.field-meta.xml
<CustomField>
    <fullName>Pipe_Type__c</fullName>
    <label>Pipe Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Asset_Family__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>SCH160</fullName>
            </value>
            <value>
                <fullName>XS</fullName>
            </value>
            <value>
                <fullName>STD</fullName>
            </value>
            <value>
                <fullName>2 7/8 EUE J55</fullName>
            </value>
            <value>
                <fullName>XXH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>