force-app/main/default/objects/Asset__c/fields/Pre_start_Book__c.field-meta.xml
<CustomField>
    <fullName>Pre_start_Book__c</fullName>
    <label>Pre-start Book</label>
    <length>20</length>
    <type>Text</type>
</CustomField>