force-app/main/default/objects/Asset__c/fields/Purchased_From__c.field-meta.xml
<CustomField>
    <fullName>Purchased_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchased From</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets Purchased</relationshipLabel>
    <relationshipName>WD_Assets1</relationshipName>
    <type>Lookup</type>
</CustomField>