force-app/main/default/objects/Asset__c/fields/Reason_for_Disposal__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Disposal__c</fullName>
    <label>Reason for Disposal</label>
    <type>TextArea</type>
</CustomField>