force-app/main/default/objects/Asset__c/fields/Registered_Owner__c.field-meta.xml
<CustomField>
    <fullName>Registered_Owner__c</fullName>
    <inlineHelpText>The Company name that the vehicle is registered to - for purpose of NHVAS</inlineHelpText>
    <label>Registered Owner</label>
    <length>30</length>
    <type>Text</type>
</CustomField>