force-app/main/default/objects/Asset__c/fields/Rego_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Rego_Expiry_Date__c</fullName>
    <inlineHelpText>What date does the Registration Expire</inlineHelpText>
    <label>Rego Expiry Date</label>
    <type>Date</type>
</CustomField>