force-app/main/default/objects/Asset__c/fields/Remote_Access_Code__c.field-meta.xml
<CustomField>
    <fullName>Remote_Access_Code__c</fullName>
    <label>Remote Access Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>