force-app/main/default/objects/Asset__c/fields/Results_Comments__c.field-meta.xml
<CustomField>
    <fullName>Results_Comments__c</fullName>
    <label>Results / Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>