force-app/main/default/objects/Asset__c/fields/Reverse_Beeper__c.field-meta.xml
<CustomField>
    <fullName>Reverse_Beeper__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reverse Beeper</label>
    <type>Checkbox</type>
</CustomField>