force-app/main/default/objects/Asset__c/fields/Safer_Together_Compliance_No__c.field-meta.xml
<CustomField>
    <fullName>Safer_Together_Compliance_No__c</fullName>
    <label>QGC - Compliance No.</label>
    <length>8</length>
    <type>Text</type>
</CustomField>