force-app/main/default/objects/Asset__c/fields/Safer_Together_Date_of_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Safer_Together_Date_of_Assessment__c</fullName>
    <label>QGC - Date of Assessment</label>
    <type>Date</type>
</CustomField>