force-app/main/default/objects/Asset__c/fields/Scheduled_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Maintenance__c</fullName>
    <label>Last Maintenance</label>
    <type>Date</type>
</CustomField>