force-app/main/default/objects/Asset__c/fields/SecureTrak_ID_No__c.field-meta.xml
<CustomField>
    <fullName>SecureTrak_ID_No__c</fullName>
    <label>SecureTrak ID No:</label>
    <length>50</length>
    <type>Text</type>
</CustomField>