force-app/main/default/objects/Asset__c/fields/Service_Audit__c.field-meta.xml
<CustomField>
    <fullName>Service_Audit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Audit</label>
    <type>Checkbox</type>
</CustomField>