force-app/main/default/objects/Asset__c/fields/Service_Parts__c.field-meta.xml
<CustomField>
    <fullName>Service_Parts__c</fullName>
    <label>Service Parts</label>
    <type>Url</type>
</CustomField>