force-app/main/default/objects/Asset__c/fields/Servicing_Required__c.field-meta.xml
<CustomField>
    <fullName>Servicing_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Servicing Required</label>
    <type>Checkbox</type>
</CustomField>