force-app/main/default/objects/Asset__c/fields/Spares_List__c.field-meta.xml
<CustomField>
    <fullName>Spares_List__c</fullName>
    <description>Essential Spares List [Critial Spares]</description>
    <label>Spares List</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>