force-app/main/default/objects/Asset__c/fields/ST_Compliant__c.field-meta.xml
<CustomField>
    <fullName>ST_Compliant__c</fullName>
    <label>ST Compliant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Exempt</fullName>
            </value>
            <value>
                <fullName>90 Day Exemption</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>