force-app/main/default/objects/Asset__c/fields/Starlink_Mounted__c.field-meta.xml
<CustomField>
    <fullName>Starlink_Mounted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the vehicle have startlink mounted</inlineHelpText>
    <label>Starlink Mounted</label>
    <type>Checkbox</type>
</CustomField>