force-app/main/default/objects/Asset__c/fields/Starlink_Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Starlink_Serial_No__c</fullName>
    <inlineHelpText>Serial No - Per Dish</inlineHelpText>
    <label>Starlink Serial No</label>
    <length>25</length>
    <type>Text</type>
</CustomField>