force-app/main/default/objects/Asset__c/fields/State_of_Registration__c.field-meta.xml
<CustomField>
    <fullName>State_of_Registration__c</fullName>
    <description>State vehicle is registered in</description>
    <label>State of Registration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QLD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>