force-app/main/default/objects/Asset__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Draft (Order/PR)</fullName>
            </value>
            <value>
                <fullName>PaymenInsurance Complete</fullName>
                <label>Payment &amp; Insurance Complete</label>
            </value>
            <value>
                <fullName>Ready to Collect</fullName>
            </value>
            <value>
                <fullName>Build/On-board</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Off-board</fullName>
            </value>
            <value>
                <fullName>Obsolete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>