force-app/main/default/objects/Asset__c/fields/Suspension__c.field-meta.xml
<CustomField>
    <fullName>Suspension__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parts - Suspension</label>
    <referenceTo>Engines__c</referenceTo>
    <relationshipLabel>WD Assets (Suspension)</relationshipLabel>
    <relationshipName>WD_Assets1</relationshipName>
    <type>Lookup</type>
</CustomField>