force-app/main/default/objects/Asset__c/fields/Tare__c.field-meta.xml
<CustomField>
    <fullName>Tare__c</fullName>
    <inlineHelpText>Tare is the Weight of unladen vehicle</inlineHelpText>
    <label>Tare</label>
    <length>10</length>
    <type>Text</type>
</CustomField>