force-app/main/default/objects/Asset__c/fields/TD_Book__c.field-meta.xml
<CustomField>
    <fullName>TD_Book__c</fullName>
    <inlineHelpText>The number of the Trucking Docket Book that is currently assigned to this asset</inlineHelpText>
    <label>TD Book #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>