force-app/main/default/objects/Asset__c/fields/Transmission_Model__c.field-meta.xml
<CustomField>
    <fullName>Transmission_Model__c</fullName>
    <label>Transmission Model</label>
    <length>20</length>
    <type>Text</type>
</CustomField>