force-app/main/default/objects/Asset__c/fields/Transmission_S_N__c.field-meta.xml
<CustomField>
    <fullName>Transmission_S_N__c</fullName>
    <label>Transmission SN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>