force-app/main/default/objects/Asset__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rig</fullName>
            </value>
            <value>
                <fullName>Camp</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Depot</fullName>
            </value>
            <value>
                <fullName>Property</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>