force-app/main/default/objects/Asset__c/fields/Under_Run__c.field-meta.xml
<CustomField>
    <fullName>Under_Run__c</fullName>
    <label>Under Run</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fitted</fullName>
                <label>Fitted/Compliant</label>
            </value>
            <value>
                <fullName>Required - Incomplete</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>