force-app/main/default/objects/Asset__c/fields/Underrun_Protection__c.field-meta.xml
<CustomField>
    <fullName>Underrun_Protection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Underrun Protection</label>
    <type>Checkbox</type>
</CustomField>