force-app/main/default/objects/Asset__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Where is the asset located?</inlineHelpText>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>WD Assets</relationshipLabel>
    <relationshipName>WD_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>