force-app/main/default/objects/Asset__c/fields/Unit_Owner__c.field-meta.xml
<CustomField>
    <fullName>Unit_Owner__c</fullName>
    <formula>Unit__r.Owner:User.Alias</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Owner</label>
    <type>Text</type>
</CustomField>