force-app/main/default/objects/Asset__c/fields/Unit_Parent_Asset__c.field-meta.xml
<CustomField>
    <fullName>Unit_Parent_Asset__c</fullName>
    <description>Parent Asset &gt; Unit</description>
    <formula>HYPERLINK( Parent_Asset__r.Unit__r.Id , Parent_Asset__r.Unit__r.Name , &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Parent Asset &gt; Unit</inlineHelpText>
    <label>Unit [Parent Asset]</label>
    <type>Text</type>
</CustomField>