force-app/main/default/objects/Asset__c/fields/Vin_Number__c.field-meta.xml
<CustomField>
    <fullName>Vin_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Vin/Chasis Number</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>