force-app/main/default/objects/Asset__c/fields/WD_Name__c.field-meta.xml
<CustomField>
    <fullName>WD_Name__c</fullName>
    <label>WD Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>