force-app/main/default/objects/Asset__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>Weight</label>
    <length>10</length>
    <type>Text</type>
</CustomField>