force-app/main/default/objects/Asset__c/fields/Windows_Product_Key__c.field-meta.xml
<CustomField>
    <fullName>Windows_Product_Key__c</fullName>
    <label>Windows Product Key</label>
    <length>30</length>
    <type>Text</type>
</CustomField>