force-app/main/default/objects/Asset__c/fields/Windows_Version__c.field-meta.xml
<CustomField>
    <fullName>Windows_Version__c</fullName>
    <label>Windows Version</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Windows 7 Pro</fullName>
            </value>
            <value>
                <fullName>Windows XP</fullName>
            </value>
            <value>
                <fullName>Windows Vista</fullName>
            </value>
            <value>
                <fullName>Windows 8</fullName>
            </value>
            <value>
                <fullName>Windows Server SBS 2011</fullName>
            </value>
            <value>
                <fullName>Windows Server 2012</fullName>
            </value>
            <value>
                <fullName>Windows Server 2008 R2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>