force-app/main/default/objects/Asset__c/fields/year_of_manufacture__c.field-meta.xml
<CustomField>
    <fullName>year_of_manufacture__c</fullName>
    <label>Year of Manufacture</label>
    <length>10</length>
    <type>Text</type>
</CustomField>