force-app/main/default/objects/Asset__c/recordTypes/Baskets.recordType-meta.xml
<RecordType>
    <fullName>Baskets</fullName>
    <active>true</active>
    <label>Baskets</label>
</RecordType>