force-app/main/default/objects/Asset__c/recordTypes/Cranes.recordType-meta.xml
<RecordType>
    <fullName>Cranes</fullName>
    <active>false</active>
    <label>Cranes</label>
</RecordType>