force-app/main/default/objects/Asset__c/recordTypes/Dollies.recordType-meta.xml
<RecordType>
    <fullName>Dollies</fullName>
    <active>true</active>
    <label>Dollies</label>
</RecordType>