force-app/main/default/objects/Asset__c/recordTypes/Fluid_Containment.recordType-meta.xml
<RecordType>
    <fullName>Fluid_Containment</fullName>
    <active>true</active>
    <label>Fluid Containment</label>
</RecordType>