force-app/main/default/objects/Asset__c/recordTypes/Forklifts.recordType-meta.xml
<RecordType>
    <fullName>Forklifts</fullName>
    <active>true</active>
    <label>Forklifts</label>
</RecordType>