force-app/main/default/objects/Asset__c/recordTypes/infrastructure.recordType-meta.xml
<RecordType>
    <fullName>infrastructure</fullName>
    <active>true</active>
    <label>Infrastructure</label>
</RecordType>