force-app/main/default/objects/Asset__c/recordTypes/Inspection_Equipment.recordType-meta.xml
<RecordType>
    <fullName>Inspection_Equipment</fullName>
    <active>true</active>
    <label>Inspection Equipment</label>
</RecordType>