force-app/main/default/objects/Asset__c/recordTypes/Light_Vehicles.recordType-meta.xml
<RecordType>
    <fullName>Light_Vehicles</fullName>
    <active>true</active>
    <label>Light Vehicles</label>
</RecordType>