force-app/main/default/objects/Asset__c/recordTypes/Loaders.recordType-meta.xml
<RecordType>
    <fullName>Loaders</fullName>
    <active>true</active>
    <label>Loaders</label>
</RecordType>