force-app/main/default/objects/Asset__c/recordTypes/Major_Asset.recordType-meta.xml
<RecordType>
    <fullName>Major_Asset</fullName>
    <active>true</active>
    <label>Major Asset</label>
</RecordType>