force-app/main/default/objects/Asset__c/recordTypes/Managed_Component.recordType-meta.xml
<RecordType>
    <fullName>Managed_Component</fullName>
    <active>true</active>
    <label>Managed Component</label>
</RecordType>