force-app/main/default/objects/Asset__c/recordTypes/Non_Vehicle_Engine.recordType-meta.xml
<RecordType>
    <fullName>Non_Vehicle_Engine</fullName>
    <active>true</active>
    <label>Non-Vehicle Engine</label>
</RecordType>