force-app/main/default/objects/Asset__c/recordTypes/Obselete.recordType-meta.xml
<RecordType>
    <fullName>Obselete</fullName>
    <active>true</active>
    <label>Obselete</label>
</RecordType>