force-app/main/default/objects/Asset__c/recordTypes/Prime_Mover.recordType-meta.xml
<RecordType>
    <fullName>Prime_Mover</fullName>
    <active>true</active>
    <label>Prime Mover</label>
</RecordType>