force-app/main/default/objects/Asset__c/recordTypes/Rig_Equipment.recordType-meta.xml
<RecordType>
    <fullName>Rig_Equipment</fullName>
    <active>true</active>
    <label>Rig Equipment</label>
</RecordType>