force-app/main/default/objects/Asset__c/recordTypes/Rigs.recordType-meta.xml
<RecordType>
    <fullName>Rigs</fullName>
    <active>true</active>
    <label>Rigs</label>
</RecordType>