force-app/main/default/objects/Asset__c/recordTypes/Shacks_Containers.recordType-meta.xml
<RecordType>
    <fullName>Shacks_Containers</fullName>
    <active>true</active>
    <label>Shacks/Containers</label>
</RecordType>