force-app/main/default/objects/Asset__c/recordTypes/Skids.recordType-meta.xml
<RecordType>
    <fullName>Skids</fullName>
    <active>true</active>
    <label>Skids</label>
</RecordType>