force-app/main/default/objects/Asset__c/recordTypes/Workshop_Tool_Shack.recordType-meta.xml
<RecordType>
    <fullName>Workshop_Tool_Shack</fullName>
    <active>true</active>
    <label>Workshop/Tool Shack</label>
</RecordType>