force-app/main/default/objects/Asset__c/listViews/allyle_Assets.listView-meta.xml
<ListView>
    <fullName>allyle_Assets</fullName>
    <columns>Unit__c</columns>
    <columns>NAME</columns>
    <columns>Asset_ID_Number__c</columns>
    <columns>Model__c</columns>
    <columns>Manufacturer__c</columns>
    <columns>year_of_manufacture__c</columns>
    <columns>Registration_Number__c</columns>
    <columns>Vin_Number__c</columns>
    <columns>Engine_Hours__c</columns>
    <columns>Registered_Owner__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Asset_Family__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unit__c</field>
        <operation>contains</operation>
        <value>YLE</value>
    </filters>
    <label>YLE | All</label>
    <sharedTo>
        <group>Finance</group>
        <group>Purchasing</group>
        <group>YLE</group>
    </sharedTo>
</ListView>