force-app/main/default/objects/Asset__c/listViews/Assets_Audit.listView-meta.xml
<ListView>
    <fullName>Assets_Audit</fullName>
    <columns>Asset_Family__c</columns>
    <columns>NAME</columns>
    <columns>Make__c</columns>
    <columns>Asset_ID_Number__c</columns>
    <columns>Registered_Owner__c</columns>
    <columns>Current_Odometer_Reading__c</columns>
    <columns>Date_OD_Last_Updated__c</columns>
    <columns>Registration_Number__c</columns>
    <columns>Rego_Expiry_Date__c</columns>
    <columns>Date_Acquired__c</columns>
    <columns>Unit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Asset__c.Forklifts,Asset__c.Light_Vehicles,Asset__c.Loaders,Asset__c.Non_Vehicle_Engine,Asset__c.Prime_Mover,Asset__c.Trailer</value>
    </filters>
    <filters>
        <field>Inventory_Item__c</field>
        <operation>notEqual</operation>
        <value>Obsolete</value>
    </filters>
    <filters>
        <field>Unit__c</field>
        <operation>contains</operation>
        <value>YLE</value>
    </filters>
    <label>YLE | KM Audit</label>
    <sharedTo>
        <group>YLE</group>
    </sharedTo>
</ListView>