force-app/main/default/objects/Asset__c/listViews/Base_WD_Assets.listView-meta.xml
<ListView>
    <fullName>Base_WD_Assets</fullName>
    <columns>Asset_Family__c</columns>
    <columns>NAME</columns>
    <columns>Asset_ID_Number__c</columns>
    <columns>Servicing_Required__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unit__c</field>
        <operation>equals</operation>
        <value>base camp - roma</value>
    </filters>
    <label>Base camp - All WD Assets</label>
    <sharedTo>
        <group>Base_Camp</group>
        <group>Finance</group>
        <role>Administration</role>
    </sharedTo>
</ListView>