force-app/main/default/objects/Asset__c/listViews/C3_Servicing_Schedule_km.listView-meta.xml
<ListView>
    <fullName>C3_Servicing_Schedule_km</fullName>
    <columns>Asset_Family__c</columns>
    <columns>NAME</columns>
    <columns>Asset_ID_Number__c</columns>
    <columns>Date_Of_Last_Service__c</columns>
    <columns>Current_Odometer_Reading__c</columns>
    <columns>Next_Service_Due_km__c</columns>
    <columns>Next_Job_Card_creation_reading__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Asset__c.Light_Vehicles,Asset__c.Prime_Mover,Asset__c.Trailer,Asset__c.Dollies</value>
    </filters>
    <filters>
        <field>Unit__c</field>
        <operation>equals</operation>
        <value>camp 3</value>
    </filters>
    <label>Camp 03 - Servicing Schedule (kms)</label>
    <sharedTo>
        <group>Camp_3</group>
        <group>Mechanics_Roma</group>
        <group>OPs_super</group>
    </sharedTo>
</ListView>